Fixed some HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-md-8">
         <h3 class="heading"><b>Featured Mars Image</b></h3>
-        <img src="{{mars_data.jpl_image_url}}" />
+        <img class="img-reactive" src="{{mars_data.jpl_image_url}}" />
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
